added batch operation for insert query in saveFuelTanks query